add logic to color numbers divisible by 3, 5 and 15

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,18 @@ body {
   color: white;
 }
 
+.text_ping {
+  color: red;
+}
+
+.text_pong {
+  color: yellow;
+}
+
+.text_pingpong {
+  color: lightblue;
+}
+
 li {
   display: none;
 }
