--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,19 @@ button {
   background: rgba(153, 51, 255, 0.8);
 }
 
+li {
+  display: none;
+}
+
+#sliderContainer {
+  background: linear-gradient(to right, rgba(0,0,0,1), rgba(153, 51, 255, 0.3),
+  rgba(0,0,0,1)), url('../img/blacktexture.jpg');
+}
+
+#userInput {
+  background: rgba(125, 225, 255, 0.2);
+}
+
 .form-group {
   background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.33, rgba(153, 51, 255, 0.3)), color-stop(0.67, rgba(153, 51, 255, 0.8)));
 background-image: -moz-linear-gradient(center bottom, rgb(14,173,173) 33%, rgb(0,255,255) 67% );
@@ -18,17 +31,25 @@ padding: 5px;
 
 /*ice blue = rgb(102, 204, 255)*/
 
-#userInput {
-  background: rgba(125, 225, 255, 0.2);
-}
+
 
 .jumbotron {
-  border-top: solid white;
-  border-bottom: solid linear-gradient(white, purple);
-  color: darkseagreen;
-  background: rgba(153, 51, 255, 0.5);
-  /*background: linear-gradient(to right, rgba(255,255,255,0),
-  rgba(255,255,255,1)), url('../img/blacktexture.jpg');*/
+  /*border-top: solid white;
+  border-bottom: solid white;*/
+  color: white;
+  background: linear-gradient(transparent, rgba(153, 51, 255, 0.5), transparent);
+  background: linear-gradient(to right, rgba(0,0,0,1), rgba(153, 51, 255, 0.3),
+  rgba(0,0,0,1)), url('../img/blacktexture.jpg');
+}
+
+.list_center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  list-style-type: none;
+  list-style: none;
+  padding-left: 0;
 }
 
 ._hidden {
@@ -56,13 +77,55 @@ padding: 5px;
 }
 
 .text_pingpong {
-  color: lightblue;
+  color: lightgreen;
 }
 
 .well {
-  background: rgba(153, 51, 255, 0.7);
+  border-left: solid white;
+  border-right: solid white;
+  border-top: none;
+  border-bottom: none;
+    background: linear-gradient(transparent, transparent, rgba(153, 51, 255, 0.3));
 }
 
-li {
-  display: none;
+
+.move_left {
+animation-name: move_left;
+animation-duration: 1s;
+animation-fill-mode: forwards;
+}
+@keyframes move_left {
+    0%   {transform: translate(-10px,0);}
+    /*25%  {transform: translate(-50px,0);}*/
+    50%  {transform: translate(-150px,0);}
+    /*75%  {transform: translate(-50px,0);}*/
+    100% {transform: translate(-0px,0);}
+}
+
+.move_right {
+animation-name: move_right;
+animation-duration: 1s;
+animation-fill-mode: forwards;
+}
+@keyframes move_right {
+    0%   {transform: translate(10px,0);}
+    /*25%  {transform: translate(-50px,0);}*/
+    50%  {transform: translate(150px,0);}
+    /*75%  {transform: translate(-50px,0);}*/
+    100% {transform: translate(0px,0);}
+}
+
+.pingpongAnim {
+  animation-name: pingpongAnim;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+}
+
+@keyframes pingpongAnim {
+  0%   {transform: translate(0px,0);}
+  25%  {transform: translate(-150px,20px);}
+  50%  {transform: translate(0px,40px);}
+  75%  {transform: translate(150px,20px);}
+  100% {transform: translate(0px,0);}
 }
