--- a/css/styles.css
+++ b/css/styles.css
@@ -7,26 +7,43 @@ body {
 button {
   margin-top: 30px;
   margin-bottom: 30px;
-  background: rgba(153, 51, 255, 0.8);
+  /*background: rgba(153, 51, 255, 0.8);*/
 }
 
 li {
   display: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+#list {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
+  min-width: 30px;
+  max-width: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #sliderContainer {
-  background: linear-gradient(to right, rgba(0,0,0,1), rgba(153, 51, 255, 0.3),
-  rgba(0,0,0,1)), url('../img/blacktexture.jpg');
+  /*background: linear-gradient(to right, rgba(0,0,0,1), rgba(153, 51, 255, 0.3),
+  rgba(0,0,0,1)), url('../img/blacktexture.jpg');*/
 }
 
 #userInput {
-  background: rgba(125, 225, 255, 0.2);
+  background: rgba(255, 225, 255, 0.2);
+}
+
+.bordered {
+  border: 0px solid white;
 }
 
 .form-group {
-  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.33, rgba(153, 51, 255, 0.3)), color-stop(0.67, rgba(153, 51, 255, 0.8)));
+  /*background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.33, rgba(255,255,255, 0.3)), color-stop(0.67, rgba(255, 255, 255, 0.8)));
 background-image: -moz-linear-gradient(center bottom, rgb(14,173,173) 33%, rgb(0,255,255) 67% );
-padding: 5px;
+padding: 5px;*/
 }
 
 /*ice blue = rgb(102, 204, 255)*/
@@ -38,8 +55,10 @@ padding: 5px;
   border-bottom: solid white;*/
   color: white;
   background: linear-gradient(transparent, rgba(153, 51, 255, 0.5), transparent);
-  background: linear-gradient(to right, rgba(0,0,0,1), rgba(153, 51, 255, 0.3),
-  rgba(0,0,0,1)), url('../img/blacktexture.jpg');
+  background: linear-gradient(to right, rgba(0,0,0,0.9), rgba(0,0,0, 0.5),
+  rgba(0,0,0,0.9)), url('../img/blacktexture.jpg');
+  background-repeat: repeat-x;
+  background-size: cover;
 }
 
 .list_center {
@@ -54,10 +73,6 @@ padding: 5px;
 
 ._hidden {
   display: none;
-}
-
-.placeholder {
-  color: white;
 }
 
 .text_centered {
@@ -85,34 +100,40 @@ padding: 5px;
   border-right: solid white;
   border-top: none;
   border-bottom: none;
-    background: linear-gradient(transparent, transparent, rgba(153, 51, 255, 0.3));
+  background: linear-gradient(to right,rgba(255,255,255, 0.3), transparent, transparent, transparent, transparent, transparent, rgba(255,255,255, 0.3));
 }
 
 
 .move_left {
+border-left: 0px solid white;
 animation-name: move_left;
 animation-duration: 1s;
 animation-fill-mode: forwards;
 }
 @keyframes move_left {
-    0%   {transform: translate(-10px,-10px);}
+    0%   {transform: translate(-10px,0);}
     /*25%  {transform: translate(-50px,0);}*/
-    50%  {transform: translate(-150px,-20px);}
+    35%  {transform: translate(-150px,0); border-width: 0px;}
+    50%  {transform: translate(-150px,0); border-width: 5px;}
+    65%  {transform: translate(-150px,0); border-width: 0px;}
     /*75%  {transform: translate(-50px,0);}*/
     100% {transform: translate(-0px,0);}
 }
 
 .move_right {
+border-right: 0px solid white;
 animation-name: move_right;
 animation-duration: 1s;
 animation-fill-mode: forwards;
 }
 @keyframes move_right {
-    0%   {transform: translate(10px,10px);}
-    /*25%  {transform: translate(-50px,0);}*/
-    50%  {transform: translate(150px,20px);}
-    /*75%  {transform: translate(-50px,0);}*/
-    100% {transform: translate(0px,0);}
+  0%   {transform: translate(10px,0);}
+  /*25%  {transform: translate(-50px,0);}*/
+  35%  {transform: translate(150px,0); border-width: 0px;}
+  50%  {transform: translate(150px,0); border-width: 5px;}
+  65%  {transform: translate(150px,0); border-width: 0px;}
+  /*75%  {transform: translate(-50px,0);}*/
+  100% {transform: translate(0px,0);}
 }
 
 .pingpongAnimLeft {
